# grace_2

./: .dockerignore  .env  .env.docker  .env.example  .env.token  .env.txt  .gitattributes  .gitignore  .output.txt  .pre-commit-config.yaml  100_PERCENT_UNIFICATION_ACHIEVED.md  100_PERCENT_UNIFICATION_COMPLETE.md  100_PERCENT_UNIFICATION_PLAN.md  ADVANCED_TRIGGERS_COMPLETE.md  AGENTIC_ERROR_SYSTEM.md  AGENTIC_LOOP_COMPLETE.md  AGENT_LIFECYCLE_SYSTEM.md  ALL_20_KERNELS_SUCCESS.md  ALL_CI_TESTS_PASSING.md  ALL_ENDPOINTS_FIXED.md  ALL_ERRORS_FIXED_COMPLETE.md  ALL_FIXES_SUMMARY.md  ALL_FREE_MODELS_FOR_GRACE.md  ALL_IMPORT_PATHS_FIXED.md  ALL_INTEGRATION_TASKS_COMPLETE.md  ALL_REQUIREMENTS_COMPLETE.md  ALL_STUBS_FIXED_REPORT.md  ALL_SYSTEMS_COMPLETE.md  ALL_SYSTEMS_CONFIRMED.md  ALL_TESTS_COMPLETE.md  ALL_TODOS_COMPLETE.md  AMP_GRADE_CODING_AGENT_COMPLETE.md  API_DISCOVERY_COMPLETE.md  API_QUICK_REFERENCE.md  API_REGISTRY.md  APPLY_PHASE_1.md  AUTONOMOUS_CHAOS_COMPLETE.md  AUTONOMOUS_CODE_HEALING.md  AUTONOMOUS_LEARNING_SYSTEM.md  AUTO_APPROVE.bat  (+587 more)
.archived/: move_list_complete.txt  remaining_files.txt
.grace_cache/: kernel_state.json
.grace_snapshots/: boot_1763191529_metadata.json  boot_1763191607_metadata.json  boot_1763191707_metadata.json  boot_1763191747_metadata.json  boot_1763191940_metadata.json  boot_1763191976_metadata.json  boot_1763192169_metadata.json  boot_1763192264_metadata.json  boot_1763193060_metadata.json  boot_1763193070_metadata.json  boot_1763193082_metadata.json  boot_1763193373_metadata.json  boot_1763193384_metadata.json  boot_1763193432_metadata.json  boot_1763193809_metadata.json  boot_1763207551_metadata.json  boot_1763209423_metadata.json  boot_1763209757_metadata.json  boot_1763210816_metadata.json  boot_1763211544_metadata.json  boot_1763211651_metadata.json  boot_1763211880_metadata.json  boot_1763226525_metadata.json  boot_1763226767_metadata.json  boot_1763226885_metadata.json  boot_1763228665_metadata.json  boot_1763231639_metadata.json  boot_1763233181_metadata.json  boot_1763233598_metadata.json  boot_1763234688_metadata.json  boot_1763234789_metadata.json  boot_1763235757_metadata.json  boot_1763235895_metadata.json  boot_1763235918_metadata.json  boot_1763236051_metadata.json  boot_1763236139_metadata.json  boot_1763236182_metadata.json  boot_1763236849_metadata.json  boot_1763236938_metadata.json  boot_1763237021_metadata.json  (+1 more)
.grace_vault/: vault.key
.junie/: guidelines.md
_trash/: competitor_tracker.py  creative_problem_solver.py  future_projects_learner.py  learning_health_api.py  search_health_api.py
alembic/: env.py  script.py.mako
backend/: .env.example  AGENT_FETCH_ETIQUETTE.md  CODING_AGENT_ARCHITECTURE.md  CODING_AGENT_QUICKSTART.md  CONSTITUTIONAL_QUICKSTART.md  EXECUTION_ENGINE.md  FEEDBACK_PIPELINE.md  README.md  __version__.py  action_executor.py  action_gateway.py  activate_grace.py  agent_core.py  agentic_config.py  agentic_error_handler.py  agentic_memory.py  agentic_observability.py  agentic_spine.py  alert_system.py  amp_api_integration.py  api_integration_manager.py  app_factory.py  approval_notifications.py  async_jobs.py  auth.py  auto_extension_loop.py  auto_retrain.py  automated_ml_training.py  automation_engine.py  autonomous_code_healer.py  autonomous_goal_setting.py  autonomous_improver.py  autonomous_pipeline_agent.py  autonomy_tiers.py  avn_avm.py  base_models.py  benchmark_scheduler.py  boot_diagnostics.py  boot_learning_system.py  boot_pipeline.py  (+235 more)
backups/: .gitignore
batch_scripts/: CONSOLIDATE.bat  CONSOLIDATE_SAFE.bat  QUICK_START_CHAT.bat  START_BOTH.bat  START_GRACE_NOW.bat  START_GRACE_WITH_WEB_LEARNING.bat  START_SERVER.bat  TEST_FRONTEND_INTEGRATION.bat  db_repair.ps1  quick_setup.bat  start_backend.bat  start_backend_simple.bat  start_chat_bridge.bat  start_full_backend.ps1  start_grace_clean.bat  start_metrics_server.bat
chat_bridge/: main.py
cli/: CLI_DELIVERY_SUMMARY.md  README.md  example_github_plugin.py  grace  grace.bat  grace.sh  grace_client.py  grace_simple.py  requirements.txt  run_tests.bat  voice_handler.py
config/: autonomous_improver_whitelist.yaml  autonomous_learning_whitelist.yaml  feature_flags.json  future_projects_curriculum.yaml  guardrails.yaml  metrics_catalog.yaml  model_manifest.yaml  snapshot_retention.yaml  trigger_mesh.yaml
data/: grace_state.json  rag_eval_dataset.json
databases/: grace.db  hallucination_ledger.json  metrics.db
demos/: markdown_summary_demo.py
docs/: AGENTIC_MEMORY.md  AGENTIC_SPINE.md  AI_CODING_AGENT_SUMMARY.md  ALERT_ML_README.md  ALL_PROBLEMS_FIXED.md  API_REFERENCE.md  APPROVAL_API.md  AUTOMATION_CADENCE.md  BACKUP_PLAN.md  BOOT_DIAGNOSTICS.md  BUSINESS_AUTOMATION_INDEX.md  BUSINESS_EMPIRE_COMPLETE.md  BUSINESS_EMPIRE_ROADMAP.md  BUSINESS_EXECUTION.md  BUSINESS_QUICKSTART.md  CHANGE_MANAGEMENT.md  CHAOS_ENGINEERING.md  CHAOS_QUICKSTART.md  CHAOS_TESTING.md  CLEANUP_NOTES.md  CLEANUP_SUMMARY.md  CODING_AGENT_INTEGRATION.md  COGNITION_DELIVERY_SUMMARY.md  COGNITION_QUICK_START.md  COGNITION_SYSTEM.md  COLLABORATIVE_COCKPIT_ALIGNED.md  COMPLETE_E2E_SUMMARY.md  COMPLETE_INTEGRATION_FINAL.md  COMPLETE_LEARNING_SYSTEM.md  COMPLETE_SYSTEM_INTEGRATION.md  COMPLETE_SYSTEM_READY.md  COMPLIANCE_CHECKLIST.md  CONSTITUTIONAL_BUILD_STATUS.md  CONTINUOUS_VALIDATION.md  CONTRIBUTOR_GUIDE.md  COPILOT_PANE_SPECIFICATION.md  COST_BASELINE.md  CURRENT_STATE_FUNCTIONAL.md  DASHBOARD_API_CONTRACT.md  DASHBOARD_COMPLETE_SPEC.md  (+128 more)
frontend/: .env.example  .gitignore  ADVANCED_FEATURES.md  API_CONTRACT.md  APPLY_IMPROVEMENTS.md  AUTO_SETUP.bat  BUILD_AND_RUN.md  BUILD_VALIDATION.md  CHAT_INTEGRATION_GUIDE.md  COMPLETE_INSTALLATION.md  COMPLETE_MEMORY_EXPLORER.md  CSP_WARNING.md  DATA_HOOKS_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile.dev  FEATURES_AT_A_GLANCE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GRACE_CONSOLE_COMPLETE.md  GRACE_CONSOLE_README.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_IMPLEMENTED.md  INDEX.md  INTEGRATION_GUIDE.md  INTERFACE_UPDATED.md  LAUNCH_CHECKLIST.md  MODEL_DISPLAY_GUIDE.md  (+39 more)
(+3723 files in other folders)
